# sm64ex

./: .clang-format  .gitignore  3D Objects - Shortcut.lnk  Build.props  Build_clang.sh  CMakeLists.txt  Dockerfile  Doxyfile  Fixes.md  Jenkinsfile  Makefile  Makefile.bad  Makefile.base  Makefile.orig  Makefile.rpic  Makefile.rpiv2  Makefile.rpiv3  Makefile.split  Makefile_rt64  README.md  README_es_ES.md  README_ms_MY.md  README_pt_BR.md  README_vi_VN.md  README_zh_CN.md  SAVE_FORMAT.MD  TODO.md  assets.json  build.sh  buildlog.txt  c2obj.py  cgdb.exe.stackdump  charmap.txt  charmap_jp.txt  compile.bat  compile.sh  debug.sh  dx11.sh  dynos.mk  extract_assets.py  (+10 more)
lib/: CMakeLists.txt
lib/asm/: bcopy.s
lib/src/: _Ldtob.c  guLookAtRef.c  guMtxF2L.c  ldiv.c  osContInit.c  osContInternal.h  osContStartReadData.c  osCreateThread.c
lib/src/math/: cosf.c
src/game/: CMakeLists.txt  area.c  area.h  behavior_actions.c  behavior_actions.h  bettercamera.h  bettercamera.inc.h  camera.c  camera.h  cheats_menu.h  crash_screen.c  debug.c  display.h  envfx_bubbles.c  envfx_snow.c  envfx_snow.h  file_select.c  game_init.c  game_init.h  geo_misc.c  geo_misc.h  hud.c  hud.h  ingame_menu.c  ingame_menu.h  ingame_menu_ml.h  interaction.c  interaction.h  intro_geo.c  level_geo.c  level_update.c  level_update.h  macro_special_objects.c  macro_special_objects.h  main.c  main.h  mario.c  mario.h  mario_actions_airborne.c  mario_actions_automatic.c  (+53 more)
src/game/behaviors/: amp.inc.c  bbh_haunted_bookshelf.inc.c  bbh_merry_go_round.inc.c  bbh_tilting_trap.inc.c  beta_chest.inc.c  beta_trampoline.inc.c  bird.inc.c  blue_coin.inc.c  bobomb.inc.c  bomp.inc.c  boo.inc.c  boo_cage.inc.c  boulder.inc.c  bowling_ball.inc.c  bowser.inc.c  bowser_bomb.inc.c  bowser_puzzle_piece.inc.c  breakable_box.inc.c  breakable_box_small.inc.c  breakable_wall.inc.c  bub.inc.c  bubba.inc.c  bubble.inc.c  bullet_bill.inc.c  bully.inc.c  butterfly.inc.c  camera_lakitu.inc.c  cannon.inc.c  cannon_door.inc.c  capswitch.inc.c  castle_floor_trap.inc.c  celebration_star.inc.c  chain_chomp.inc.c  checkerboard_platform.inc.c  chuckya.inc.c  clam.inc.c  cloud.inc.c  coffin.inc.c  coin.inc.c  collide_particles.inc.c  (+93 more)
src/game/behaviors/butterfly/: blueprint.cpp  blueprint.hpp  butterfly.cpp  butterfly.hpp
src/game/behaviors/thwomp/: thwomp.cpp  (+1 more)
src/goddard/: CMakeLists.txt  debug_utils.c  draw_objects.c  dynlist_proc.c  dynlist_proc.h  gd_main.c  gd_main.h  gd_math.c  gd_memory.c  joints.c  objects.c  old_menu.c  particles.c  renderer.c  renderer.h  sfx.h  shape_helper.c  skin.c
src/menu/: CMakeLists.txt  file_select.c  file_select.cpp  file_select.h  interaction.c  intro_geo.c  intro_geo.h  level_select_menu.c  mario.c  menu_button.cpp  menu_button.hpp  star_select.c
src/pc/: CMakeLists.txt  README-n64-fast32-engine.md  README-n64-fast3d-engine.m  README-n64-fast3d-engine.md  cheats.c  cheats.h  cliopts.c  cliopts.h  compatibility.h  configfile.c  configfile.h  ini.c  ini.h  logfile.c  logfile.h  mixer.c  mixer.h  pc_main.c  pc_main.h  platform.c  platform.h  ultra_reimplementation.c
src/pc/audio/: audio_api.h  audio_null.c  audio_sdl.c  audio_sdl.h  audio_sdl1.c  audio_sdl2.c
src/pc/controller/: controller_api.h  controller_entry_point.c  controller_keyboard.c  controller_keyboard.h  controller_mouse.h  controller_recorded_tas.c  controller_sdl.c  controller_sdl.h  controller_sdl1.c  controller_sdl2.c
src/pc/discord/: discordrpc.c  discordrpc.cpp  discordrpc.h
src/pc/fs/: dirtree.c  dirtree.h  fs.c  fs.h  fs_packtype_dir.c  fs_packtype_zip.c
src/pc/gfx/: gfx_cc.h  gfx_direct3d11.cpp  gfx_direct3d11.h  gfx_direct3d12.cpp  gfx_direct3d12.h  gfx_direct3d_common.cpp  gfx_direct3d_common.h  gfx_dxgi.cpp  gfx_dxgi.h  gfx_opengl.c  gfx_opengl.cpp  gfx_opengl.unused  gfx_opengl_legacy.c  gfx_pc.c  gfx_pc.h  gfx_rendering_api.h  gfx_rendering_api_config.h  gfx_rt64.cpp  gfx_rt64.h  gfx_rt64_geo_map.h  gfx_screen_config.h  gfx_sdl1.c  gfx_sdl2.c  gfx_window_manager_api.h  shader.h  xxhsum.c
src/pc/network/: network.c  network.h
src/pc/rmodern/: glad_vulkan.c  rmodern.h  rmodern_main.cpp
tools/audiofile-0.3.6/: ACKNOWLEDGEMENTS  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  audiofile-uninstalled.pc  audiofile-uninstalled.pc.in  audiofile.pc  audiofile.pc.in  audiofile.spec  config.h  config.h.in  config.status  configure  configure.ac  libtool
tools/audiofile-0.3.6/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
tools/audiofile-0.3.6/docs/: Makefile  Makefile.am  Makefile.in  afCloseFile.3.txt  afGetFrameCount.3.txt  afInitCompression.3.txt  afInitFileFormat.3.txt  afNewFileSetup.3.txt  afOpenFile.3.txt  afQuery.3.txt  afSetErrorHandler.3.txt  afWriteFrames.3.txt  asciidoc.conf  sfconvert.1.txt
tools/audiofile-0.3.6/examples/: Makefile  Makefile.am  Makefile.in  adddcoffset.c  alsaplay.cpp  irixtestloop.c  power.c  sgi.c
tools/audiofile-0.3.6/gtest/: Makefile  Makefile.am  Makefile.in  README.audiofile  gtest-all.cpp
tools/audiofile-0.3.6/libaudiofile/: AIFF.cpp  AIFF.h  AVR.cpp  AVR.h  AudioFormat.h  CAF.cpp  CAF.h  Compiler.h  FLACFile.cpp  FLACFile.h  FileHandle.h  IFF.cpp  IFF.h  IRCAM.cpp  IRCAM.h  Instrument.h  Makefile  Makefile.am  Makefile.in  Marker.cpp  Marker.h  Miscellaneous.cpp  NIST.cpp  NIST.h  NeXT.h  Raw.cpp  Raw.h  SampleVision.cpp  Shared.h  Tag.h  UUID.h  VOC.cpp  VOC.h  WAVE.cpp  WAVE.h  af_vfs.h  afinternal.h  aupv.c  aupvinternal.h  byteorder.h  (+9 more)
tools/audiofile-0.3.6/sfcommands/: Makefile  Makefile.am  Makefile.in  sfinfo.c
tools/audiofile-0.3.6/test/: ADPCM.cpp  AES.cpp  ALAC.cpp  ChannelMatrix.cpp  FLAC.cpp  FloatToInt.cpp  Instrument.cpp  IntToFloat.cpp  InvalidCompressionFormat.cpp  Loop.cpp  Lossless.h  Makefile  Makefile.am  Makefile.in  Miscellaneous.cpp  NeXT.cpp  SampleFormat.cpp  Seek.cpp  Sign.cpp  TestUtilities.cpp  TestUtilities.h  VirtualFile.cpp  floatto24.c  instparamtest.c  sixteen-to-eight.c  testaupv.c  testchannelmatrix.c  testdouble.c  testfloat.c  testmarkers.c  twentyfour.c  twentyfour2.c  writealaw.c  writeraw.c  writeulaw.c
(+989 files in other folders)
